--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,19 @@ body{
     font-family:'Indie Flower';
     color:rgb(129, 103, 151);
 }
+
+#content{
+    display:flex;
+    justify-content:center;
+    /* height:100vh; */
+}
+
 nav{
     position:fixed;
+    z-index:1;
     top:0;
     left:0;
+    box-shadow:0px 4px 4px 1px rgba(0, 0, 0, 0.15);
     display:flex;
     width:100vw;
     height:80px;
@@ -37,21 +46,72 @@ nav{
     height:50%;
     margin:15px;
     width:6%;
+    min-width:95px;
     cursor:pointer;
     transition:0.1s;
-    box-shadow:0px 4px 5px 1px rgba(0, 0, 0, 0.349);
+    box-shadow:0px 4px 4px 1px rgba(0, 0, 0, 0.15);
 }
 
-.nav-btn:nth-child(odd){
+.nav-btn:nth-child(odd), .card:nth-child(odd){
     transform: rotate(2deg);
 }
-.nav-btn:nth-child(even){
+.nav-btn:nth-child(even), .card:nth-child(even){
     transform: rotate(-2deg);
 }
 
-.nav-btn:hover{
+.nav-btn:hover, .nav-btn.selected{
     transform: scale(1.15) rotate(0deg);
     transition:0.1s;
     filter:brightness(1.05);
+}
 
+#main-section{
+    margin-top:150px;
+    background-color:rgb(81, 85, 126);
+    display:flex;
+    min-width:250px;
+    align-items:center;
+    flex-direction:column;
+    font-size:30px;
+    padding:30px;
+    width:50%;
+}
+
+.card{
+    display:flex;
+    align-items:center;
+    flex-direction:column;
+    text-align:center;
+    height:auto;
+    box-shadow:0px 4px 4px 1px rgba(0, 0, 0, 0.15);
+    padding:5px 0px 5px 0px;
+    width:30%;
+    min-width:250px;
+    margin:20px;
+    background-color:rgb(214, 213, 168);
+}
+.card *{
+    font-size:20px;
+    word-break: normal;
+    margin:0px;
+}
+
+.card img{
+    opacity:50%;
+    margin:100px;
+}
+
+#title{
+    background-color: rgb(214, 213, 168);
+    width:30%;
+    min-width:200px;
+    box-shadow:0px 4px 4px 1px rgba(0, 0, 0, 0.15);
+    display:flex;
+    margin:25px;
+    align-items:center;
+    flex-direction:column;
+}
+
+::-webkit-scrollbar{
+    display:none;
 }
